# mycelix-space

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
dna/: dna.yaml  happ.yaml
dna/zomes/conjunctions/coordinator/: Cargo.toml
dna/zomes/conjunctions/coordinator/src/: lib.rs
dna/zomes/conjunctions/integrity/: Cargo.toml
dna/zomes/conjunctions/integrity/src/: lib.rs
dna/zomes/debris_bounties/coordinator/: Cargo.toml
dna/zomes/debris_bounties/coordinator/src/: lib.rs
dna/zomes/debris_bounties/integrity/: Cargo.toml
dna/zomes/debris_bounties/integrity/src/: lib.rs
dna/zomes/observations/coordinator/: Cargo.toml
dna/zomes/observations/coordinator/src/: lib.rs
dna/zomes/observations/integrity/: Cargo.toml
dna/zomes/observations/integrity/src/: lib.rs
dna/zomes/orbital_objects/coordinator/: Cargo.toml
dna/zomes/orbital_objects/coordinator/src/: lib.rs
dna/zomes/orbital_objects/integrity/: Cargo.toml
dna/zomes/orbital_objects/integrity/src/: lib.rs
dna/zomes/traffic_control/coordinator/: Cargo.toml
dna/zomes/traffic_control/coordinator/src/: lib.rs
dna/zomes/traffic_control/integrity/: Cargo.toml
dna/zomes/traffic_control/integrity/src/: lib.rs
docs/: VISION_EXPANSION.md
lib/orbital-mechanics/: Cargo.toml
lib/orbital-mechanics/src/: cdm.rs  conjunction.rs  coordinates.rs  covariance.rs  lib.rs  propagator.rs  state.rs  tle.rs
scripts/: build-happ.sh  sandbox-setup.sh
tests/: Cargo.toml  conjunctions_tests.rs  lib.rs  orbital_mechanics_tests.rs  propagation_tests.rs
tests/integration/: zome_tests.rs
tests/sweettest/: Cargo.toml  README.md  conjunction_workflow.rs  multi_agent.rs
tools/celestrak-demo/: Cargo.toml
tools/celestrak-demo/src/: holochain_client.rs  main.rs
ui/: README.md  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/components/: ConnectionStatus.svelte  DataLoader.svelte
ui/src/lib/holochain/: client.ts
ui/src/lib/orbital/: celestrak.ts  propagator.ts
ui/src/lib/stores/: conjunctions.ts  index.ts  objects.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/bounties/: +page.svelte
ui/src/routes/conjunctions/: +page.svelte
ui/src/routes/objects/: +page.svelte
zomes/shared/: Cargo.toml
zomes/shared/src/: lib.rs
