[workspace]
resolver = "2"
members = [
    # Core orbital mechanics library (no Holochain deps)
    "lib/orbital-mechanics",

    # Tools
    "tools/celestrak-demo",

    # Integration tests (unit/serialization)
    "tests",

    # Sweettest integration tests (multi-agent)
    "tests/sweettest",

    # Shared zome utilities
    "zomes/shared",

    # DNA Zomes - Orbital Objects (catalog of tracked objects)
    "dna/zomes/orbital_objects/integrity",
    "dna/zomes/orbital_objects/coordinator",

    # DNA Zomes - Observations (sensor data ingestion)
    "dna/zomes/observations/integrity",
    "dna/zomes/observations/coordinator",

    # DNA Zomes - Conjunctions (collision prediction & CDM)
    "dna/zomes/conjunctions/integrity",
    "dna/zomes/conjunctions/coordinator",

    # DNA Zomes - Debris Bounties (Kessler cleanup market)
    "dna/zomes/debris_bounties/integrity",
    "dna/zomes/debris_bounties/coordinator",

    # DNA Zomes - Traffic Control (automated negotiation)
    "dna/zomes/traffic_control/integrity",
    "dna/zomes/traffic_control/coordinator",
]

[workspace.dependencies]
# Holochain 0.7 compatible
hdi = "0.7"
hdk = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
holochain_serialized_bytes = "0.0.56"

# WASM compatibility
getrandom = { version = "0.3", features = ["wasm_js", "std"] }

# Orbital mechanics
sgp4 = "1.0"           # NORAD propagation algorithms
nalgebra = { version = "0.32", features = ["serde-serialize"] }  # Linear algebra for covariance
chrono = "0.4"         # Time handling

# Cryptography (from mycelix-health PQE)
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Zero-knowledge proofs (future)
# ark-ff = "0.4"
# ark-ec = "0.4"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
