[package]
name = "mycelix-space-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for mycelix-space orbital mechanics and Holochain types"
publish = false

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for potential future Holochain tests)
tokio = { version = "1", features = ["full"] }

# Testing utilities
anyhow = "1.0"
pretty_assertions = "1.4"

# Orbital mechanics library
orbital-mechanics = { path = "../lib/orbital-mechanics" }

# Shared types (for Holochain zome integration tests)
mycelix-space-shared = { path = "../zomes/shared" }

# Time handling
chrono = "0.4"

# Math
nalgebra = { version = "0.32", features = ["serde-serialize"] }

[[test]]
name = "orbital_mechanics"
path = "orbital_mechanics_tests.rs"

[[test]]
name = "conjunctions"
path = "conjunctions_tests.rs"

[[test]]
name = "propagation"
path = "propagation_tests.rs"

[[test]]
name = "shared_types"
path = "integration/zome_tests.rs"
