[package]
name = "conjunctions_integrity"
version = "0.1.0"
edition = "2021"
description = "Integrity zome for conjunction analysis and CDMs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "conjunctions_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
mycelix-space-shared = { path = "../../../../zomes/shared" }
getrandom = { workspace = true }
