[package]
name = "debris_bounties_coordinator"
version = "0.1.0"
edition = "2021"
description = "Coordinator zome for Kessler cleanup bounty system"

[lib]
crate-type = ["cdylib", "rlib"]
name = "debris_bounties_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
debris_bounties_integrity = { path = "../integrity" }
mycelix-space-shared = { path = "../../../../zomes/shared" }
orbital-mechanics = { path = "../../../../lib/orbital-mechanics" }
getrandom = { workspace = true }
