[package]
name = "observations_coordinator"
version = "0.1.0"
edition = "2021"
description = "Coordinator zome for sensor observations"

[lib]
crate-type = ["cdylib", "rlib"]
name = "observations_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
observations_integrity = { path = "../integrity" }
mycelix-space-shared = { path = "../../../../zomes/shared" }
orbital-mechanics = { path = "../../../../lib/orbital-mechanics" }
getrandom = { workspace = true }
