[package]
name = "traffic_control_coordinator"
version = "0.1.0"
edition = "2021"
description = "Coordinator zome for automated space traffic coordination"

[lib]
crate-type = ["cdylib", "rlib"]
name = "traffic_control_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
traffic_control_integrity = { path = "../integrity" }
mycelix-space-shared = { path = "../../../../zomes/shared" }
orbital-mechanics = { path = "../../../../lib/orbital-mechanics" }
getrandom = { workspace = true }
